Fixed overlapping menu on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,12 @@ body {
   color: #272829;
 }
 
+@media (min-width: 1200px) {
+  body {
+    padding-left: 300px;
+  }
+}
+
 a {
   color: #149ddd;
 }
